<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/menu_search"
        android:title="@string/search"
        android:icon="@drawable/ic_action_search"
        app:showAsAction="always|collapseActionView"
        app:actionViewClass="android.support.v7.widget.SearchView" />
    <item
        android:id="@+id/menu_share"
        android:title="@string/sharepage" />
    <item android:id="@+id/menu_back"
        android:title="@string/back"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_forward"
        android:title="@string/forward" />
    <item
        android:id="@+id/menu_home"
        android:title="@string/home" />
    <item
        android:id="@+id/menu_reload"
        android:title="@string/reload" />
</menu>